updated sdk to create executable jar file