@@ -11,6 +11,7 @@ import org.springframework.web.servlet.view.RedirectView;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -64,7 +65,7 @@ public class OAuth2PKCETest {
     @Test
     public void testLoginTypeClientCredentialFlowWithAudience() {
         kindeClientSDK= new KindeClientSDK(
-                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Map.of("audience",domain+"/api"),null
+                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Collections.singletonMap("audience",domain+"/api"),null
         );
         Object result = kindeClientSDK.login(response);
         System.out.println("testLoginTypeClientCredentialFlowWithAudience() :: "+result.toString());
@@ -75,7 +76,7 @@ public class OAuth2PKCETest {
     @Test
     public void testLoginTypeClientCredentialFlowWithOrgCode() {
         kindeClientSDK= new KindeClientSDK(
-                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Map.of("audience",domain+"/api"),null
+                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Collections.singletonMap("audience",domain+"/api"),null
         );
         Map<String,Object> additonalParameters=new HashMap<>();
         additonalParameters.put("org_code","org_b3afab4f52a");
@@ -89,7 +90,7 @@ public class OAuth2PKCETest {
     @Test
     public void testRegisterTypeClientCredentialFlowWithAdditional() {
         kindeClientSDK= new KindeClientSDK(
-                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Map.of("audience",domain+"/api"),null
+                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Collections.singletonMap("audience",domain+"/api"),null
         );
         Map<String,Object> additonalParameters=new HashMap<>();
         additonalParameters.put("org_code","org_b3afab4f52a");
@@ -103,7 +104,7 @@ public class OAuth2PKCETest {
     @Test
     public void testCreateOrgTypeClientCredentialFlow() {
         kindeClientSDK= new KindeClientSDK(
-                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Map.of("audience",domain+"/api"),null
+                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Collections.singletonMap("audience",domain+"/api"),null
         );
         Object result = kindeClientSDK.createOrg(response);
         System.out.println("testCreateOrgTypeClientCredentialFlow() :: "+result.toString());
@@ -114,7 +115,7 @@ public class OAuth2PKCETest {
     @Test
     public void testCreateOrgTypeClientCredentialFlowWithAdditional() {
         kindeClientSDK= new KindeClientSDK(
-                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Map.of("audience",domain+"/api"),null
+                domain,redirectUri,clientId,clientSecret,GrantType.PKCE.getValue(),logoutRedirectUri,null, Collections.singletonMap("audience",domain+"/api"),null
         );
         Map<String,Object> additonalParameters=new HashMap<>();
         additonalParameters.put("org_code","org_b3afab4f52a");
